--- a/templates/aluno/cadastro.html
+++ b/templates/aluno/cadastro.html
@@ -1,7 +1,57 @@
 {% extends 'shared/base.html' %}
-{% load static %}
-
 {% block content %}
-    <h1>Cadastro de Alunos</h1>
-    <img src="{% static 'img/topo_ifpi_paulista.png' %}" alt="Legenda">
+
+<main class="main">
+
+        <!-- Starter Section Section -->
+  <section id="starter-section" class="starter-section section">
+
+    <div class="container" data-aos="fade-up">
+
+
+    <form action="{% url 'aluno/cadastro' %}" method="POST" class="row g-3">
+        {% csrf_token %}
+        
+            <div class="col-md-12">
+                <label for="{{ form.nome.id_for_label }}" class="form-label">{{ form.nome.label }}</label>
+                {{ form.nome }}
+            </div>
+
+            <div class="col-md-6">
+                <label for="{{ form.matricula.id_for_label }}" class="form-label">{{ form.matricula.label }}</label>
+                {{ form.matricula }}
+            </div>
+
+            <div class="col-md-6">
+                <label for="{{ form.telefone.id_for_label }}" class="form-label">{{ form.telefone.label }}</label>
+                {{ form.telefone }}
+            </div>
+
+            <div class="col-md-12">
+                <label for="{{ form.email.id_for_label }}" class="form-label">{{ form.email.label }}</label>
+                {{ form.email }}
+            </div>
+
+            <div class="col-md-12">
+                <div class="form-check form-switch">
+                  <label for="{{ form.status.id_for_label }}" class="form-label form-check-label">{{ form.status.label }}</label>
+                  {{ form.status }}
+                </div>
+              </div>
+
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary btn-lg"><i class="bi bi-save"></i> Salvar</button>
+                <button type="reset" class="btn btn-secondary btn-lg"><i class="bi bi-trash"></i> Limpar</button>
+            </div>
+
+        </div>
+
+    </form>
+
+</div>
+
+</section><!-- /Starter Section Section -->
+
+</main>
+
 {% endblock %}
