Lista de alunos

--- a/templates/shared/partials/_footer.html
+++ b/templates/shared/partials/_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <footer>
     <hr>
-    <p>Sistema desenvolvido por Clésio Gonçalves</p>
+    <center>Sistema desenvolvido por Clésio Gonçalves</center>
 </footer>
 
 <!-- JavaScript -->
