--- a/templates/aluno/lista.html
+++ b/templates/aluno/lista.html
@@ -40,7 +40,7 @@
                               <i class="bi bi-eye"></i></a>
     
                             <!--Editar-->
-                            <a href="" class="btn btn-outline-warning btn-sm" 
+                            <a href="{% url 'aluno/edita' aluno.id %}" class="btn btn-outline-warning btn-sm" 
                             data-bs-toggle="tooltip" data-bs-placement="bottom" title="Editar"> 
                               <i class="bi bi-pencil-square"></i></a>
                         </td>
